SG/import.tf
resource "aws_security_group" "my_imported_sg" {
  # Leave this empty for now; we will fill it in after the import
}
